...
  
  // 页面列表
  late final List<Widget> _pages;
  
  // 页面标题
  final List<String> _titles = [
    '服务器',
    '订阅',
    '统计',
    '日志',
    '设置',
  ];
  
...
